# bhv-prototype

./: README.md  main.py  pyproject.toml  requirements.txt
images/: cockroach.jpg.txt  eren.jpg.txt  pexels-souvenirpixels-417074.jpg.txt
templates/: index.html  success.html
